[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client 
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "=0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "json"] }

# REST API
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time/date
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Base58
bs58 = "0.5"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2"